vulkan-loader (1.2.198.1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 04 Jan 2022 17:04:09 +0200

vulkan-loader (1.2.189.0-2) unstable; urgency=medium

  * fix-ftbfs.diff: Fix a typo in a test.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 07 Sep 2021 15:32:49 +0300

vulkan-loader (1.2.189.0-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 07 Sep 2021 13:40:34 +0300

vulkan-loader (1.2.182.0-2) unstable; urgency=medium

  * Upload to unstable.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 01 Sep 2021 15:12:01 +0300

vulkan-loader (1.2.182.0-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 13 Aug 2021 08:58:06 +0300

vulkan-loader (1.2.162.0-1) unstable; urgency=medium

  * New upstream release.
  * fix-pkgconfig.diff: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 07 Jan 2021 09:34:46 +0200

vulkan-loader (1.2.154.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 09 Oct 2020 09:58:07 +0300

vulkan-loader (1.2.148.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 07 Sep 2020 14:57:51 +0300

vulkan-loader (1.2.141.0-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 12 Jun 2020 07:20:34 +0300

vulkan-loader (1.2.135.0-3) unstable; urgency=medium

  [ Simon McVittie ]
  * Add missing autopkgtests dependencies (Closes: #958836)

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 04 May 2020 13:33:06 +0300

vulkan-loader (1.2.135.0-2) unstable; urgency=medium

  * symbols: Add a separate symbols file for x86, strip missing symbols
    from the rest.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 09 Apr 2020 19:13:42 +0300

vulkan-loader (1.2.135.0-1) unstable; urgency=medium

  * New upstream release. (LP: #1871754)