@@ -1,6 +1,8 @@
 vulkan-loader (1.2.198.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * sync_headers.sh: Updated to take sdk version as an argument, and use
+    git checkout instead of force reset.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 04 Jan 2022 17:04:09 +0200
 
